// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<VerticalNavigation /> with empty values should match the snapshot 1`] = `
<div
  className="makeStyles-panel-9 makeStyles-panelCollapsed-11 HvVerticalNavigation-root"
>
  <div
    className="MuiContainer-root HvContainer-root MuiContainer-maxWidthXl makeStyles-toggleCollapsePanel-12 css-1d4akpq-MuiContainer-root"
  >
    <button
      className="MuiButtonBase-root MuiButton-root HvButton-root MuiButton-text MuiButton-textPrimary HvButton-ghost MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-root HvButton-root MuiButton-text MuiButton-textPrimary HvButton-ghost MuiButton-sizeMedium MuiButton-textSizeMedium HvButton-icon HvButton-ghostSVG css-fsero8-MuiButtonBase-root-MuiButton-root"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onContextMenu={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <div
        className="HvIconBase-root HvIconBase-xs"
        name="Forwards"
      >
        <svg
          focusable={false}
          height={12}
          viewBox="0 0 16 16"
          width={12}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            className="color0"
            d="M4.79011 15.5L4 14.79529 10.61729 8 4 1.30536 4.79011.5 12 8z"
            fill="#414141"
          />
        </svg>
      </div>
    </button>
  </div>
  <nav
    className="HvVerticalNavigationTree-root"
  >
    <ul
      className="HvVerticalNavigationTreeView-root HvVerticalNavigationTree-list"
    />
  </nav>
</div>
`;

exports[`<VerticalNavigation /> with navigation data should match the snapshot 1`] = `
<div
  className="makeStyles-panel-9 makeStyles-panelCollapsed-11 HvVerticalNavigation-root"
>
  <div
    className="MuiContainer-root HvContainer-root MuiContainer-maxWidthXl makeStyles-toggleCollapsePanel-12 css-1d4akpq-MuiContainer-root"
  >
    <button
      className="MuiButtonBase-root MuiButton-root HvButton-root MuiButton-text MuiButton-textPrimary HvButton-ghost MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-root HvButton-root MuiButton-text MuiButton-textPrimary HvButton-ghost MuiButton-sizeMedium MuiButton-textSizeMedium HvButton-icon HvButton-ghostSVG css-fsero8-MuiButtonBase-root-MuiButton-root"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onContextMenu={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <div
        className="HvIconBase-root HvIconBase-xs"
        name="Forwards"
      >
        <svg
          focusable={false}
          height={12}
          viewBox="0 0 16 16"
          width={12}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            className="color0"
            d="M4.79011 15.5L4 14.79529 10.61729 8 4 1.30536 4.79011.5 12 8z"
            fill="#414141"
          />
        </svg>
      </div>
    </button>
  </div>
  <nav
    className="HvVerticalNavigationTree-root"
  >
    <ul
      className="HvVerticalNavigationTreeView-root HvVerticalNavigationTree-list"
    >
      <li
        className="HvVerticalNavigationTreeViewItem-node HvVerticalNavigationTree-listItem HvVerticalNavigationTreeViewItem-selectable HvVerticalNavigationTreeViewItem-unselected"
        id="hvtreeview2-1"
      >
        <div
          className="HvVerticalNavigationTreeViewItem-content HvTypography-root HvTypography-normalText"
          id="hvtreeview2-1-button"
          onClick={[Function]}
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          role="button"
          style={
            Object {
              "paddingLeft": 10,
            }
          }
          tabIndex={0}
        >
          <div
            aria-label={null}
            aria-labelledby={null}
            className=""
            data-mui-internal-clone-element={true}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseOver={[Function]}
            onTouchStart={[Function]}
            style={
              Object {
                "overflow": "hidden",
                "textOverflow": "ellipsis",
                "whiteSpace": "nowrap",
              }
            }
          >
            Menu1
          </div>
        </div>
      </li>
    </ul>
  </nav>
</div>
`;
